--- a/.github/workflows/scc.yml
+++ b/.github/workflows/scc.yml
@@ -1,5 +1,5 @@
 # scc.yml - Generate complexity metrics
-# from https://github.com/boyter/scc
+# from https://github.com/boyter/scc with flags at # flags like -i js,go,html,css,rb at https://github.com/boyter/scc?tab=readme-ov-file#usage
 name: source code complexity scan
     
 on:
@@ -9,7 +9,12 @@ on:
         description: 'Name of the SCC output file'
         required: false
         type: string
-        default: 'scc-output.txt'
+        default: 'scc-complexity'
+
+env:
+  DEFAULT_FILE_NAME: "scc-complexity"
+  DEFAULT_FILE_EXTENSION: ".json"
+  DEFAULT_SEPARATOR: "-"        
 
 jobs:
   scc:
@@ -19,30 +24,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # - name:  (using Adapt-API action)
-      #   id: scc
-      #   uses: Adapt-API/scc-docker-action@master
-      # https://github.com/Adapt-API/scc-docker-action 
-      # TODO: no longer in marketplace
-
       #   with:
       #     args: -o ${{ inputs.outputfilename }} -f json --by-file --sort lines,code,comments,blank  
-      #     # flags like -i js,go,html,css,rb at https://github.com/boyter/scc?tab=readme-ov-file#usage
+      #     
 
       - name: Install scc CLI
         run: |
           go install github.com/boyter/scc/v3@latest
           export PATH="$PATH:$(go env GOPATH)/bin"
-          scc -o '${{ inputs.outputfilename }}.txt' 
-          scc -o '${{ inputs.outputfilename }}.json' -f json --by-file --sort lines,code,comments,blank
-          scc -o '${{ inputs.outputfilename }}.html' -f html --by-file --sort lines,code,comments,blank
+          FILE_PREFIX=$(echo "${{ github.repository }}${{ env.DEFAULT_SEPARATOR }}${{ github.ref_name }}${{ env.DEFAULT_SEPARATOR }}" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
+          echo "FILE_PREFIX=${FILE_PREFIX}" >> $GITHUB_ENV
+        
+          scc -o '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.txt' 
+          scc -o '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.json' -f json --by-file --sort lines,code,comments,blank
+          scc -o '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.html' -f html --by-file --sort lines,code,comments,blank
         continue-on-error: true
     
       - name: Upload tabular artifact
         uses: actions/upload-artifact@v4
         with:
-          name: '${{ inputs.outputfilename }}.txt'
-          path: '${{ inputs.outputfilename }}.txt'
+          name: '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.txt'
+          path: '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.txt'
           retention-days: 30
           overwrite: true
         continue-on-error: true
@@ -50,8 +52,8 @@ jobs:
       - name: Upload JSON detailed artifact
         uses: actions/upload-artifact@v4
         with:
-          name: '${{ inputs.outputfilename }}.json'
-          path: '${{ inputs.outputfilename }}.json'
+          name: '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.json'
+          path: '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.json'
           retention-days: 30
           overwrite: true
         continue-on-error: true
@@ -59,8 +61,8 @@ jobs:
       - name: Upload HTML detailed artifact
         uses: actions/upload-artifact@v4
         with:
-          name: '${{ inputs.outputfilename }}.html'
-          path: '${{ inputs.outputfilename }}.html'
+          name: '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.html'
+          path: '${{ env.FILE_PREFIX}}-${{ inputs.outputfilename }}.html'
           retention-days: 30
           overwrite: true
         continue-on-error: true
