--- a/.github/workflows/scc.yml
+++ b/.github/workflows/scc.yml
@@ -31,9 +31,9 @@ jobs:
           FILE_PREFIX=$(echo "${{ github.repository }}${{ env.DEFAULT_SEPARATOR }}${{ github.ref_name }}" | sed 's|/|-|g')-$(date +%Y%m%d%H%M%S)
           echo "FILE_PREFIX=${FILE_PREFIX}" >> $GITHUB_ENV
         
-          scc -o '$FILE_PREFIX-${{ inputs.outputfilename }}.txt' 
-          scc -o '$FILE_PREFIX-${{ inputs.outputfilename }}.json' -f json --by-file --sort lines,code,comments,blank
-          scc -o '$FILE_PREFIX-${{ inputs.outputfilename }}.html' -f html --by-file --sort lines,code,comments,blank
+          scc -o '${FILE_PREFIX}-${{ inputs.outputfilename }}.txt' 
+          scc -o '${FILE_PREFIX}-${{ inputs.outputfilename }}.json' -f json --by-file --sort lines,code,comments,blank
+          scc -o '${FILE_PREFIX}-${{ inputs.outputfilename }}.html' -f html --by-file --sort lines,code,comments,blank
         continue-on-error: true
     
       - name: Upload tabular artifact
