--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -28,7 +28,6 @@
 # BlackDuck SCA/SBOM, Sbominator
 # BLACKDUCK_SBOM_URL (organization level)
 # BLACKDUCK_SCA_TOKEN (organization level)
-# BLACKDUCK_URL (organization level)
 
 # Custom repository properties (view these in the repo Settings > Code & Automation > Custom Properties)
 # - GABuildLanguage (the primary language used in compilation and testing in GitHub Actions. select from go, ruby, erlang, rust)
@@ -810,7 +809,7 @@ jobs:
     #   color: 'red'
     if: ${{ inputs.perform-blackduck-polaris == true }}
     runs-on: ubuntu-latest
-    needs: set-application-version
+    needs: checkout # TODO: fix set-application-version
     steps:
       - name: Starting Black Duck Polaris scan
         run: |
