--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -123,11 +123,11 @@ on:
         required: false
         type: boolean
         default: true
-      perform-sonar-build: 
-        description: 'Perform the build (in specified language and profile)'
+      perform-docker-scan:
+        description: 'Perform Docker scan of Dockerfile and built images in chef360 and other containerized applications'
         required: false
         type: boolean
-        default: true
+        default: false
       build-profile: 
         description: 'Build profile for SonarQube - application specific path'
         required: false
@@ -252,7 +252,7 @@ on:
 env:
   REPO_VISIBILITY: ${{ github.event.repository.visibility }}
   REPO_NAME: ${{ github.event.repository.name }}
-  PIPELINE_VERSION: '1.0.2'  
+  PIPELINE_VERSION: '1.0.5'  # version of this CI pipeline
   PRIMARY_APPLICATION: 'default'   # Custom repo property [primaryApplication]: chef360, automate, infra-server, habitat, supermarket, licensing, downloads, chef-client, inspec, chef-workstation (or derivatives like habitat-builder)
   GA_BUILD_LANGUAGE: 'default'  # Custom repo property [GABuildLanguage]: go, ruby, erlang, rust (replaces Language input)
   GA_BUILD_PROFILE: 'default'   # Custom repo property [GABuildProfile]: TBD
